Create SnackBar class and change the toasts in different activities to snackbar

--- a/myGuide/app/src/main/res/layout/activity_add_education.xml
+++ b/myGuide/app/src/main/res/layout/activity_add_education.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:paddingStart="10dp"
-    tools:context=".ui.AddEducationActivity">
+    tools:context=".ui.AddEducationActivity"
+    android:id="@+id/AddEducationActivity">
 
 
     <TextView
