--- a/myGuide/app/src/main/res/layout/activity_chooserole.xml
+++ b/myGuide/app/src/main/res/layout/activity_chooserole.xml
@@ -8,7 +8,8 @@
 
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context=".ui.ChooseRoleActivity">
+    tools:context=".ui.ChooseRoleActivity"
+    android:id="@+id/ChooseRoleActivity">
 
 
     <TextView
