--- a/myGuide/app/src/main/res/layout/activity_get_all_connected.xml
+++ b/myGuide/app/src/main/res/layout/activity_get_all_connected.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.GetAllConnected"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/GetAllConnected">
 
 
     <androidx.appcompat.widget.Toolbar
