--- a/myGuide/app/src/main/res/layout/activity_login.xml
+++ b/myGuide/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="#FEFEFF"
     android:fitsSystemWindows="true"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:id="@+id/LoginActivity">
 
 
     <androidx.cardview.widget.CardView
@@ -16,7 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="60dp"
         app:cardBackgroundColor="@color/white"
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardviewTitle">
+        app:layout_constraintTop_toBottomOf="@+id/tvDetailedAbout">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -96,16 +96,14 @@
             <Button
                 android:id="@+id/btnLogIn"
                 android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="10dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="10dp"
                 android:backgroundTint="#C10505"
                 android:text="Log In"
 
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
                 app:layout_constraintHorizontal_bias="0.517"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/password_text_input_layout"
                 app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />
 
             <TextView
@@ -142,7 +140,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="6dp"
                 android:text="or"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -150,13 +148,13 @@
 
             <ImageButton
                 android:id="@+id/ibLinkedinSignin"
-                android:layout_width="300dp"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"
                 android:backgroundTint="@color/white"
-                android:src="@drawable/ic_sign_in_small___hover"
+                android:src="@drawable/linkedin_signin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -165,45 +163,32 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-
-        android:id="@+id/cardviewTitle"
+    <TextView
+        android:id="@+id/tvDetailedAbout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="serif-monospace"
+        android:text="MyGuide"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvDetailedAbout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="serif-monospace"
-            android:text="MyGuide"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
 
     <ImageButton
         android:id="@+id/ibGoBackLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_width="35dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:background="@color/white"
         android:src="?attr/actionModeCloseDrawable"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/cardviewTitle"
-        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
