--- a/myGuide/app/src/main/res/layout/activity_tutor_detail.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_detail.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
-    tools:context=".ui.TutorDetailActivity">
+    tools:context=".ui.TutorDetailActivity"
+    android:id="@+id/TutorDetailActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Webi Chala"
+            android:text="No name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/ivDetailTutorProfile"
@@ -137,11 +138,11 @@
             android:id="@+id/tvIsInperson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/tvIsOnline"
-            app:layout_constraintTop_toBottomOf="@+id/tvDetailedTutorName" />
+            app:layout_constraintBottom_toBottomOf="@+id/ivDetailTutorProfile"
+            app:layout_constraintStart_toStartOf="@+id/tvIsOnline"
+            app:layout_constraintTop_toBottomOf="@+id/tvIsOnline" />
 
         <TextView
             android:id="@+id/tvHourlyRateDetailed"
@@ -156,13 +157,11 @@
             android:id="@+id/btnConnect"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:backgroundTint="#2196F3"
             android:text="Connect"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvIsInperson"
             app:layout_constraintTop_toBottomOf="@+id/tvHourlyRateDetailed" />
 
 
