--- a/myGuide/app/src/main/res/layout/activity_tutor_home.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_home.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.StudentHomeActivity">
+    tools:context=".ui.StudentHomeActivity"
+    android:id="@+id/StudentHomeActivity">
 
     <FrameLayout
         android:id="@+id/flContainerScheduleFragment"
