--- a/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
-    tools:context=".ui.TutorSetupActivity">
+    tools:context=".ui.TutorSetupActivity"
+    android:id="@+id/TutorSetupActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_height="90dp"
             android:layout_marginTop="16dp"
             android:background="@color/white"
-            android:src="@drawable/user_icon"
+            android:src="@drawable/registration_user"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,28 +38,6 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ibTutorProfileRegister" />
-
-        <View
-            android:id="@+id/sideLine1"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="32dp"
-            android:background="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/ibTutorProfileRegister"
-            app:layout_constraintEnd_toStartOf="@id/ibTutorProfileRegister"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/ibTutorProfileRegister" />
-
-        <View
-            android:id="@+id/sideLine2"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="32dp"
-            android:background="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/ibTutorProfileRegister"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/ibTutorProfileRegister"
-            app:layout_constraintTop_toTopOf="@id/ibTutorProfileRegister" />
 
         <EditText
             android:id="@+id/etAbout"
