Improve UI in different activities and change toasts to snack bar

--- a/myGuide/app/src/main/res/layout/bottomsheetlayout.xml
+++ b/myGuide/app/src/main/res/layout/bottomsheetlayout.xml
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="60dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/add_tutor_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
