--- a/myGuide/app/src/main/res/layout/item_home_connectedtutors.xml
+++ b/myGuide/app/src/main/res/layout/item_home_connectedtutors.xml
@@ -25,18 +25,19 @@
                 android:id="@+id/ivHomeConnectedTutorProfile"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/profile_icon" />
+                app:srcCompat="@drawable/registration_user" />
 
             <TextView
                 android:id="@+id/tvConnectedTutorsName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="24dp"
                 android:text="Webi Chala"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivHomeConnectedTutorProfile" />
