--- a/myGuide/app/src/main/res/layout/change_password_dialog.xml
+++ b/myGuide/app/src/main/res/layout/change_password_dialog.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:id="@+id/changePasswordDialog">
 
 
     <EditText
