--- a/myGuide/app/src/main/res/layout/fragment_home.xml
+++ b/myGuide/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".StudentFragments.HomeFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/HomeFragmentStudent">
 
     <androidx.appcompat.widget.Toolbar
 
@@ -35,7 +36,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/profile_icon" />
+                app:srcCompat="@drawable/registration_user" />
 
             <TextView
                 android:id="@+id/twitter_icon"
