--- a/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".StudentFragments.HomeFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/FragmentHomeTutor">
 
     <androidx.appcompat.widget.Toolbar
 
@@ -24,6 +25,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/home_profile_tutor"
                 android:layout_width="40dp"
@@ -34,7 +36,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/profile_icon" />
+                app:srcCompat="@drawable/registration_user" />
 
             <TextView
                 android:id="@+id/tvTitleHomeTutor"
