--- a/myGuide/app/src/main/res/layout/fragment_schedule_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_schedule_tutor.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.TutorHomeActivity"
     android:background="@color/white"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/FragmentScheduleTutor">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
