--- a/myGuide/app/src/main/res/layout/item_message.xml
+++ b/myGuide/app/src/main/res/layout/item_message.xml
@@ -11,10 +11,10 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile_icon" />
+        app:srcCompat="@drawable/registration_user" />
 
     <TextView
         android:id="@+id/tvMessageSenderName"
