--- a/myGuide/app/src/main/res/layout/message_incoming.xml
+++ b/myGuide/app/src/main/res/layout/message_incoming.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- res/layout/message_incoming.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
@@ -20,11 +21,12 @@
 
     <ImageView
         android:id="@+id/ivProfileOther"
-        android:layout_alignParentLeft="true"
-        android:contentDescription="@string/profile_other"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_alignParentLeft="true"
+        android:contentDescription="@string/profile_other"
+        android:src="@mipmap/ic_launcher"
+        app:srcCompat="@drawable/registration_user" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
