--- a/myGuide/app/src/main/res/layout/message_outgoing.xml
+++ b/myGuide/app/src/main/res/layout/message_outgoing.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- res/layout/message_outgoing.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipToPadding="false"
@@ -27,6 +28,7 @@
         android:layout_height="64dp"
         android:layout_alignParentRight="true"
         android:contentDescription="@string/profile_me"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        app:srcCompat="@drawable/registration_user" />
 
 </RelativeLayout>
