--- a/myGuide/app/src/main/res/layout/activity_chooserole.xml
+++ b/myGuide/app/src/main/res/layout/activity_chooserole.xml
@@ -16,10 +16,10 @@
         android:id="@+id/tvChooseRole"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
         android:text="Select Your Role"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#2196F3"
+        android:textColor="@color/Mint_green"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,24 +31,27 @@
         android:id="@+id/cardviewStudent"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="70dp"
+        android:background="@drawable/student"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvChooseRole">
 
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="77dp"
+            android:layout_height="72dp"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="Student"
-            android:textColor="#2196F3"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
@@ -57,7 +60,7 @@
         android:id="@+id/cardViewTutor"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
@@ -65,8 +68,8 @@
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cardviewStudent"
-        app:layout_constraintTop_toBottomOf="@id/tvChooseRole">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardviewStudent">
 
 
         <TextView
@@ -76,7 +79,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="Tutor"
-            android:textColor="#2196F3"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
